--- a/css/styles.css
+++ b/css/styles.css
@@ -7,3 +7,22 @@
   opacity: 0.5;
   filter: Alpha(opacity=50); /* IE8 and earlier */
 }
+ #banner {
+  background-image: url("../css/img/banner.jpg");
+  text-align: center;
+  height: 300px;
+  background-position: 0% 50%
+
+}
+#banner h1 {
+  margin-top: 30px;
+  position: relative;
+  top: 60px;
+  right: 150px;
+  font-size: 160px;
+}
+body {
+  background-image: url("../css/img/bg-photo.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
